--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<html>
-  <head>
-    <title>Hello, World!</title>
-    <p>Selections from CWD Index</p>
-  </head>
-  <body>
-    <h1>Hello, World</h1>
-    <h2> My name is Christopher Tran, and I like pizza. I also really enjoy design. </h2></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Manifesto</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
-    <a href="https://anatomyof.ai">anatomyof.ai </a> <br>
-    <p> Thought this was super cool, I am very interested in AI so this seems valuable to me!</p>
+  <div class="side-poem">
+    for the earth<br>
+    shall dissolve<br>
+    like snow,<br><br>
+    but my life<br>
+    will forever<br>
+    be mine
+  </div>
 
-    <a href="https://smashthewalls.com/">smash the walls </a> <br>
-    <p> This was a fun site, I like how it shows elements of motion design. </p>
-
-    <a href="https://www.guessthepin.com/">guess the pin </a> <br>
-    <p> Another cool site that is definitely a lot more simple, but I'm sure this is a valuable project or something similiar to learn how to code. </p>
-  </body>
+</body>
 </html>
