--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8" />
   <title>Manifesto</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <div class="grain"></div>
 
   <div class="side-poem">
     for the earth<br>
