--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <html>
-<head>
-  <meta charset="UTF-8" />
-  <title>Manifesto</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+
 <body>
-
-  <div class="grain"></div>
-
-  <div class="side-poem">
+  <body style="background:black; color:white;"></body>
     for the earth<br>
     shall dissolve<br>
     like snow,<br><br>
     but my life<br>
     will forever<br>
     be mine
-  </div>
-
 </body>
 </html>
