--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-  <body style="background:black; color:white;"></body>
+   <body style="background:black; color:white; font-family:'Brush Script MT', cursive; font-size:64px;">
     for the earth<br>
     shall dissolve<br>
     like snow,<br><br>
