--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <html>
 
 <body>
-   <body style="background:black; color:white; font-family:'Playfair Script', cursive; font-size:64px;">
+   <body style="background:black; color:white; font-family:'Playfair Script', cursive; font-size:24px;">
     for the earth<br>
     shall dissolve<br>
     like snow,<br><br>
-    but my life<br>
+
+    so i make<br>
+    what i will<br><br>
+  
+    and in designing so<br>
+    my life <br>
     will forever<br>
     be mine
 </body>
 </html>
+for the earth  
+shall dissolve  
+like snow,  
+
+so i make  
+what will not last,  
+carefully—  
+
+and in the making,  
+my life  
+becomes mine
